objects/Key_Task_to_User_Story__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key_Task_to_G_A__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Key Task to G.A.</label>
        <referenceTo>Key_Task_to_G_A__c</referenceTo>
        <relationshipLabel>Key Tasks to User Stories</relationshipLabel>
        <relationshipName>Key_Tasks_to_User_Stories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relate a Key Task to G.A. to a User Story</description>
        <inlineHelpText>Relate a Key Task to G.A. to a User Story</inlineHelpText>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>Key Tasks to User Stories</relationshipLabel>
        <relationshipName>Key_Tasks_to_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Key Task to User Story</label>
    <nameField>
        <displayFormat>KTUS-{0000}</displayFormat>
        <label>Key Task to User Story Ref</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Tasks to User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>